# Amnezichat

./: CONTRIBUTORS.md  CONTRIBUTORS_TR.md  PROTOCOL.md  PROTOCOL_TR.md  README.md  README_TR.md
client/: .gitignore  Cargo.toml  Dockerfile  flake.nix
client/src/: authentication.rs  encryption.rs  gui.rs  key_exchange.rs  key_operations.rs  main.rs  network_operations.rs
client/static/: app.js  index.html  styles.css
server/: Dockerfile
server/src/: main.rs
server/static/: Amnezichat-public-key.asc  Amnezichat-x86_64.AppImage.sig  Amnezichat-x86_64.deb.sig  index.html  styles.css
