[package]
name = "Amnezichat"
version = "0.1.0"
edition = "2021"


[dependencies]
reqwest = { version = "0.11", features = ["blocking", "json", "socks"] }
ipnetwork = "0.18.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
oqs = "0.10.0"
regex = "1.7"
rand = "0.8.4"
chacha20poly1305 = "0.10"
argon2 = "0.5"
zeroize = "1.5"
base64 = "0.21"
hex = "0.4"
rpassword = "7.3.1"
sha3 = "0.10.8"
x25519-dalek = "2.0.1"
ed25519-dalek = "2.1.1"
rocket = { version = "0.5", features = ["json"] }
eframe = "0.26"
egui = "0.26"
rfd = "0.12"
which = "4.4"